# kiosco24

./: .git_diff_output.txt  .git_diff_utf8.txt  .gitignore  Escanear Pricely.cmd  NEGOCIO-REAL.md  PRODUCCION.md  brechas_mejoras_clikit.md  calculadora-rentabilidad-clikit.html  checklist_reemplazo_afipsdk_zap_fiscal.md  divs.txt  dry-run-out.txt  errors.txt  errors2.txt  errors3.txt  eslint-output.json  execute-out.txt  get_branches.ts  lint_results.txt  next.config.ts  out.json  out2.json  out3.json  package-lock.json  package.json  plan_reemplazo_afipsdk_zap_fiscal.md  prisma.config.ts  prisma_err.txt  prisma_error.txt  prisma_gen_final.txt  prisma_gen_log.txt  prisma_val.txt  quehaceclikit.md  query.js  query2.js  query3.js  query_output.txt  readable_lint.txt  scratch-barcodes.ts  test-ingreso-rapido.ts  test-products.js  (+17 more)
.qwen/: settings.json
prisma/: schema.prisma  schema.prisma.head.tmp  (+3 more)
tools/platform-scraper-rs/: Cargo.toml  Escanear Carrefour.cmd  README.md  coto_output.txt  output.txt
tools/platform-scraper-rs/scripts/: live-dashboard.html  run-carrefour-review.ps1  run-pricely-review.ps1  serve-live-dashboard.ps1
tools/platform-scraper-rs/src/: buffer.rs  config.rs  db.rs  main.rs  models.rs  normalize.rs  r2.rs  remote.rs  review.rs
tools/platform-scraper-rs/src/scrapers/: carrefour.rs  coto.rs  mod.rs  pricely.rs
tools/platform-scraper-rs/tools/platform-scraper-rs/output/: coto-category-debug.html  review-0bd022f8-4f16-466f-83f6-b13cd8fc1447.html  review-2ed4a6cb-48f1-4a45-88b8-49c3a41e9007.html  review-f0723994-459e-47f6-83b5-9af03fca18ee.html
(+356 files in other folders)
