[package]
name = "platform-scraper-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
aws-config = "1.8"
aws-sdk-s3 = "1.115"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"
dotenvy = "0.15"
headless_chrome = "1.0"
rand = "0.9"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "deflate"] }
scraper = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid", "macros"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time", "fs", "sync"] }
ureq = "3.3.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
